se deja la app como estaba
