# src/__init__.py
@@ -1,19 +1,34 @@
-from flask import Flask, render_template, send_from_directory
-from flask_login import LoginManager
-from src.routes import AuthSwagger, ObjectDataRoutes, NotificationRoutes
+from decouple import config as config_environment
+
+from flask import Flask
+from flask_jwt_extended import JWTManager
+from flask_swagger_ui import get_swaggerui_blueprint
+
+from src.routes import AuthRoutes, NotificationRoutes
 
 app = Flask(__name__)
 
-login_manager = LoginManager()
-login_manager.init_app(app)
+app.config['JWT_SECRET_KEY'] = config_environment('JWT_SECRET_KEY')
+jwt = JWTManager(app)
+
+# swagger configs
+SWAGGER_URL = '/swagger'
+#API_URL = '/static/openapi.json'
+API_URL = '/static/swagger.json'
+SWAGGER_BLUEPRINT = get_swaggerui_blueprint(
+    SWAGGER_URL,
+    API_URL,
+    config={
+        'app_name' : "Todo Lista Endpoints"
+    }
+)
+
+app.register_blueprint(SWAGGER_BLUEPRINT, url_prefix = SWAGGER_URL)
+
 
 def init_app(config):
 
     app.config.from_object(config)
-
-    app.register_blueprint(ObjectDataRoutes.main_get_data, url_prefix='/')
-    app.register_blueprint(ObjectDataRoutes.main_getObjectData, url_prefix='/object-data/base64')
-    app.register_blueprint(ObjectDataRoutes.main_getObjectDataJson, url_prefix='/object-data/json')
 
     app.register_blueprint(NotificationRoutes.main_notiSelec, url_prefix='/noti_selec')
     app.register_blueprint(NotificationRoutes.main_notiRead, url_prefix='/noti_read')
@@ -28,20 +43,10 @@ def init_app(config):
     app.register_blueprint(NotificationRoutes.main_userUpdate, url_prefix='/user_update')
     app.register_blueprint(NotificationRoutes.main_loginApp, url_prefix='/login_app')
 
-    app.register_blueprint(AuthSwagger.main_mainSwaggerOauth, url_prefix='/auth-swagger')
-    app.register_blueprint(AuthSwagger.swagger_blueprint, url_prefix='/swagger')
-    
+
+    app.register_blueprint(AuthRoutes.main_loginUserJWT, url_prefix='/login')
+    app.register_blueprint(AuthRoutes.main_logoutJWT, url_prefix='/logout')
+    app.register_blueprint(AuthRoutes.main_refreshTokenJWT, url_prefix='/refresh_token')
+    app.register_blueprint(AuthRoutes.main_funcionTestJWT, url_prefix='/function_test')
+
     return app
-
-
-@app.route('/')
-def index():
-    data = {
-        'mensaje': 'Hola mundo'
-    }
-    return render_template('login.html', data=data)
-
-
-@app.route('/static/assets/<path:filename>')
-def static_files(filename):
-    return send_from_directory('static', filename)
